--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "build": "bun build src/index.ts --outdir ./dist --target bun",
     "lint": "bunx @biomejs/biome check --write src/",
     "typecheck": "bunx tsc --noEmit",
-    "test": "bun test"
+    "test": "bun test",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate": "drizzle-kit migrate",
+    "db:push": "drizzle-kit push",
+    "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@elysiajs/cors": "^1.1.0",
+    "drizzle-orm": "^0.45.1",
     "elysia": "^1.1.0",
     "pino": "^9.0.0",
     "pino-pretty": "^11.0.0"
@@ -20,6 +25,7 @@
   "devDependencies": {
     "@biomejs/biome": "^1.8.0",
     "@types/bun": "latest",
+    "drizzle-kit": "^0.31.8",
     "typescript": "^5.5.0"
   }
 }
