--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,10 +12,15 @@ services:
       - NODE_ENV=production
       - PORT=3001
       - HOST=0.0.0.0
-      - CORS_ORIGINS=http://localhost:5173,http://localhost:3000
+      - CORS_ORIGINS="*"
       - LOG_LEVEL=info
       - RATE_LIMIT_WINDOW_MS=60000
       - RATE_LIMIT_MAX_REQUESTS=100
+      - SESSION_TTL_DAYS=7
+      - SESSION_IDLE_DAYS=1
+    volumes:
+      - ./data:/app/data
+      - ./sessions.db:/app/sessions.db
     restart: unless-stopped
     healthcheck:
       test: ["CMD", "wget", "-q", "--spider", "http://localhost:3001/api/health/live"]
@@ -36,3 +41,9 @@ services:
       options:
         max-size: "10m"
         max-file: "3"
+    networks:
+      - jira-network
+
+networks:
+  jira-network:
+    driver: bridge
