--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "dependencies": {
     "@elysiajs/cors": "^1.1.0",
+    "better-sqlite3": "^12.6.2",
     "drizzle-orm": "^0.45.1",
     "elysia": "^1.1.0",
     "pino": "^9.0.0",
