feat(services): refactor JIRA service with modular architecture and add export functionality
- Extract JIRA service logic into modular components (cache, http-client, report-builder)
- Add export service with ExcelJS integration for worklog data export
- Consolidate JIRA service exports through new index file for cleaner imports
- Update worklog controller and routes to support new export functionality
- Add ExcelJS dependency for spreadsheet generation capabilities
- Improve code organization by separating concerns into focused service modules

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@libsql/client": "^0.17.0",
     "drizzle-orm": "^0.45.1",
     "elysia": "^1.1.0",
+    "exceljs": "^4.4.0",
     "pino": "^9.0.0",
     "pino-pretty": "^11.0.0"
   },
